<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <EditText
            android:id="@+id/inDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none" />

        <EditText
            android:id="@+id/inPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_place_site"
            android:inputType="text" />

        <EditText
            android:id="@+id/inWorkers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_workers"
            android:inputType="number" />

        <EditText
            android:id="@+id/inCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cost_worker"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/inNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_note"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/inPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paid"
            android:inputType="numberDecimal" />
    </LinearLayout>
</ScrollView>
